# mylead-cli

./: .gitignore  LICENSE  README.md  main.py  ml.py  models.py  ploting.py  pyproject.toml  tables.py  utils.py
mlcli/: main.py  ml.py  models.py  ploting.py  plotting.py  tables.py  utils.py
myleadcli/: __main__.py  main.py  ml.py  models.py  plotting.py  tables.py  utils.py
tests/: conftest.py  fake_data_creator.py  test_main.py  test_ml.py  test_models.py  test_utils.py
