[tool.poetry]
name = "mlcli"
version = "0.1.0"
description = "CLI for MyLead API"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mylead_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
httpx = "^0.24.1"
pandas = "^2.1.0"
asyncio = "^3.4.3"
pydantic = "^2.3.0"
aiolimiter = "^1.1.0"
tenacity = "^8.2.3"
orjson = "^3.9.7"
python-dotenv = "^1.0.0"
plotly = "^5.16.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
select = [
    
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
    "C4",
    "TCH",
    "SIM"
]

target-version = "py311"
show-fixes= true