[tool.poetry]
name = "mlcli"
version = "0.1.0"
description = ""
authors = ["Iwo <kosmala.iwo@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mlcli = "mlcli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
httpx = {extras = ["http2"], version = "^0.25.0"}
pandas = "^2.1.0"
asyncio = "^3.4.3"
pydantic = "^2.3.0"
aiolimiter = "^1.1.0"
tenacity = "^8.2.3"
orjson = "^3.9.7"
python-dotenv = "^1.0.0"
plotly = "^5.16.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
select = [
    
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
    "C4",
    "TCH",
    "SIM"
]

target-version = "py311"
show-fixes= true
