[tool.poetry]
name = "mlcli"
version = "0.1.0"
description = ""
authors = ["Iwo <kosmala.iwo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "" #can be the repo
repository = ""
keywords = ["test", "dependencies", "documentation"]
classifiers = [
"Development Status :: 5 — Production/Stable",
"Intended Audience :: Education",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
mlcli = "mlcli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
httpx = {extras = ["http2"], version = "^0.25.0"}
pandas = "^2.1.0"
asyncio = "^3.4.3"
pydantic = "^2.3.0"
tenacity = "^8.2.3"
orjson = "^3.9.7"
python-dotenv = "^1.0.0"
plotly = "^5.16.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"
pytest = "^7.4.2"
pytest-httpx = "^0.26.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
faker = "^19.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = [
    
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
    "TCH",
    "SIM",
    "C4", #flake8 comprehensions
    "PT" #flake8-pytest-style
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

target-version = "py311"
show-fixes= true

[tool.coverage.paths]
source = ["mlcli", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mlcli"]

[tool.coverage.report]
show_missing = true
fail_under = 100
